Upgraded RTIO system again.

--- a/rtio.conf
+++ b/rtio.conf
@@ -1,9 +1,13 @@
 card1 = redstone_card "af3b9808-69b9-4638-b40d-b8600a528571"
 card2 = redstone_card "c13baa61-3cd3-4c53-8f76-9d6c77fe82db"
 light1 = vanilla_out(card1, north)
-door1 = vanilla_out(card1, down)
+door1, door1status = vanilla_out(card1, down)
 press1 = on_press(vanilla_in(card2, west))
 
-when(press1, set(door1, false))
+unlock, unlocked = cell_bool(false)
 
-console_pub("light1", "door1")
+press1 = filter(unlocked, press1)
+
+when(press1, set_from(door1, invert(door1status)))
+
+console_pub("light1", "door1", "door1status", "unlock")
