Initial nonvolatile storage implementation.

--- a/rtio.conf
+++ b/rtio.conf
@@ -4,7 +4,7 @@ light1 = vanilla_out(card1, north)
 door1, door1status = vanilla_out(card1, down)
 press1 = on_press(vanilla_in(card2, west))
 
-unlock, unlocked = cell_bool(false)
+unlock, unlocked = cell_bool("door1_unlocked", false)
 
 press1 = filter(unlocked, press1)
 
